--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "jspdf-invoice-template": "^1.4.3",
     "mongoose": "^8.2.1",
     "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
+    "socket.io": "^4.7.4",
     "wbm": "^1.1.16"
   }
 }
